# qwen3vl-captioner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAC_TESTING.md  README.md  SECURITY.md  WINDOWS_TESTING.md  app.py  diagnose.bat  doctor.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
.github/workflows/: lint.yml  windows-smoke.yml
engine/: base.py  cuda_setup.py  inference.py  mlx_engine.py  model_downloader.py
gui/: app_settings_dialog.py  caption_panel.py  config.py  dataset_panel.py  file_browser.py  image_viewer.py  main_window.py  model_download_manager.py  notification_panel.py  settings_panel.py  theme.py  version.py
tests/: conftest.py  test_caption_cleanup.py  test_config.py  test_cuda_setup.py  test_download_part_identity.py  test_inference_image.py  test_mlx_engine.py  test_model_downloader.py  test_model_registry.py
