[project]
name = "qwen3vl-captioner"
version = "1.4.1"
description = "Portable Qwen3-VL image captioning GUI with GGUF inference"
requires-python = ">=3.11,<3.13"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "PyQt6>=6.7",
    "Pillow>=10.0",
    "huggingface-hub>=0.25",
    "numpy>=1.26",
    "pynvml>=11.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
# MLX backend for Apple Silicon Macs (installed automatically by setup.sh)
mlx = ["mlx-vlm>=0.1.0"]

[project.scripts]
qwen3vl-captioner = "app:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
